--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,115 @@ title: home
 layout: layout.njk
 ---
 
+{% include 'header.njk' %}
+
 <section>
-<h1>Bienvenidos a la Fuente de Soda</h1>
+
+  <i class="fa-thin fa-baby-carriage"></i>
+
+  <ul class="controls" id="customize-controls" aria-label="Carousel Navigation" tabindex="0">
+    <li class="prev" data-controls="prev" aria-controls="customize" tabindex="-1">
+        <i class="fas fa-angle-left fa-4x"></i>
+    </li>
+    <li class="next" data-controls="next" aria-controls="customize" tabindex="-1">
+        <i class="fas fa-angle-right fa-4x"></i>          
+    </li>
+</ul>
+
+  <div class="relative my-slider shadow">
+    <div>
+        <img src="{{ '/assets/img/slider1.png' | url }}" alt="" />
+    </div>
+    <div>
+      <img src="{{ '/assets/img/slider2.jpg' | url }}"alt=""/>
+    </div>
+    <div>
+      <img src="{{ '/assets/img/slider3.jpg' | url }}" alt=""/>
+    </div>
+  </div>
 </section>
+
+<style>
+
+    .my-slider img {
+        max-height: 800px;
+        object-fit: cover;
+        width: 100%;
+        object-position: center;
+    }
+
+
+    .slider-container {
+        padding: 0.5rem;
+        margin: 0.5rem auto 0 auto;
+        overflow: hidden;
+        position:relative;
+      
+    }
+    
+    .controls li {
+      color: #919932;
+    }
+    
+    .controls {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        position: absolute;
+        left: 10%;
+        width: 80%;
+        top: 50%;
+        transform: translatey(-50%);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 10;
+    }
+    
+    .controls:focus {
+      outline: none;
+    }
+    
+    .controls li:hover {
+      cursor: pointer;
+    }
+    .tns-nav>.tns-nav-active {
+      background: rgb(190, 189, 189) !important;
+    }
+    .tns-nav>[aria-controls] {
+      width: 12px;
+      height: 12px;
+      padding: 0;
+      margin: 0 10px;
+      border-radius: 50%;
+      background: rgb(146, 137, 137);
+      border: 0;
+    }
+    .tns-nav {
+      text-align: center;
+      margin: 10px 0;
+    }
+     .tns-controls button { 
+      display: inline-block;
+      padding: 8px 16px;
+      background-color:  #04AA6D;
+      color: white;
+      border-radius: 50%;
+      border: 0px;
+      font-weight: 700;
+      font-size: 20px;
+    
+     }
+    
+    .tns-controls button:hover { 
+        background-color: #ddd;
+      color: black;
+    }
+    .tns-controls {
+        margin-top: 20px;
+        margin-left: 10px;
+        position: absolute;
+        z-index: 10;
+    }
+    
+    </style>
