--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,19 +1,14 @@
-
-
-<ul class="nav-menu" id="primary-menu">
-  {% for item in menuItems %}
-    <li class="menu-item menu-item-{{ item.menu_item }}{% if page_title == item.menu_item %} menu-item-current{% endif %}"><a href="../{{ item.menu_item | lower | replace(" ", "") }}/">{{ item.menu_item }}</a></li>
-  {% endfor %}
-</ul> 
-
 <nav class="container flex justify-around py-8 mx-auto bg-teal-600">
   <div>
-    <h3 class="text-2xl font-medium text-blue-500">LOGO</h3>
+    <a href="{{ '/' | url }}" class="uppecase"> LOGO </a>
   </div>
   <div class="space-x-8 text-white text-lg uppercase font-bold ">
-    <a href="">Inicio</a>
-    <a href="">Nuestro Equipo</a>
-    <a href="">La Carta</a>
-    <a href="">Contactanos</a>
+ {% for page in collections.pages | sortByOrder %}
+  
+<a class="hover:text-amber-400" href="{{page.url | url }}">{{page.data.title}}</a>
+
+
+{% endfor %}
+
   </div>
 </nav>
