--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -2,7 +2,7 @@
 layout: layout.njk
 ---
 
-<div class="shadow bg-lime-100 h-screen	">
+<div class="shadow bg-lime-100" style="min-height:1000px;" >
 {% include 'header.njk' %}
 
 {{ content | safe }}
