--- a/src/pages/carta.njk
+++ b/src/pages/carta.njk
@@ -11,3 +11,17 @@ order: 2
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <script src="{{ '/assets/js/getLetter.js' | url }}"></script>
 
+<style>
+.producto img {
+height:300px;
+object-fit: cover;
+width: 100%;
+}
+
+.producto h4 {
+font-size: 20px;
+font-weight: bold;
+padding-top : 20px;
+color: #0d9488;
+}
+</style>
