--- a/src/pages/historia.njk
+++ b/src/pages/historia.njk
@@ -3,19 +3,17 @@ title: Historia
 order: 3
 ---
 
-
- <div class="container mx-auto mt-12 mb-40 space-y-12">
-                <div class="flex max-w-md bg-white shadow-lg rounded-lg overflow-hidden"  style="margin: 20px;">
-                    <img class="w-1/3 bg-cover" :src="card.img" style="max-width:500px;"/>
+  <div class="container mx-auto mt-12 mb-40 space-y-12">
+                <div class="m-10 flex w-screen bg-white shadow-lg rounded-lg overflow-hidden" style="margin: 20px;">
+                    <img class="w-1/3 bg-cover" src="" style="max-width:500px;"/>
                     <div class="w-2/3 p-10">
-                        <h3 class="font-semibold text-lg leading-tight truncate py-3">Historia</h3>
+                        <h3 class="font-semibold text-lg leading-tight truncate py-3">>Historia</h3>
                         <p class="mt-2 py-3 ">
-
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                         </p>    
-                        <p class="text-sm text-gray-700 uppercase tracking-wide font-semibold mt-2">
-                        </p>
+                        
 
-                        <a :href="card.link"  class=" hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Ver Ubicacion</a>
                     </div>
                 </div>
             </div>
+        
