--- a/assets/main.bundle.css
+++ b/assets/main.bundle.css
@@ -510,6 +510,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .order-1 {
   order: 1;
 }
+.m-10 {
+  margin: 2.5rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -613,6 +616,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-1\/2 {
   width: 50%;
 }
+.w-screen {
+  width: 100vw;
+}
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -630,9 +636,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-lg {
   max-width: 32rem;
-}
-.max-w-md {
-  max-width: 28rem;
 }
 .flex-1 {
   flex: 1 1 0%;
